Fixed text overflow issues

--- a/styles/hero/name.css
+++ b/styles/hero/name.css
@@ -1,11 +1,11 @@
 .hero_name {
-    font-size: 2rem;
+    font-size: 5vw;
     margin-bottom: 10px;
-    font-size: 1.5rem;
+    /* font-size: 1.5rem; */
 }
 
-@media screen and (max-width: 700px) {
-  .hero_name {
-    white-space: normal; /* allow wrapping on narrow screens */
-  }
+@media (max-width: 700px) {
+    .hero_name {
+        font-size: 8vw;
+    }
 }
