--- a/styles/navbar/desktop/navbar.css
+++ b/styles/navbar/desktop/navbar.css
@@ -8,7 +8,7 @@
   top: 0;
   z-index: 10;
   width: 100%;
-  padding-top: 20px 10px;
+  padding: 20px 30px;
 }
 
 .navbar_container {
