--- a/styles/navbar/mobile/navbar.css
+++ b/styles/navbar/mobile/navbar.css
@@ -1,7 +1,8 @@
 @media screen and (max-width: 700px) {
 
   #navbar_name {
-    font-size: 2rem;
+    font-size: 1.5rem;
+    max-width: 0.3vw;
   }
 
   /* --- MENU CONTAINER --- */
@@ -30,7 +31,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    top: 80px;
+    top: 110px;
 
     /* animation */
     transform: scaleY(0);
